TLCPM-86 - update /projects panel on page load to reflect  presence of site in /migrating and /migrated on page load and on poll of /migrations. TODO: site centric whereas it should be tool centric, also changes to /migrated after /migrations change are not being reflected in the /projects scope. Also controller is getting obese, move things to services

--- a/public/views/projects-migrating.html
+++ b/public/views/projects-migrating.html
@@ -1,19 +1,19 @@
 <div ng-hide="migratingProjects.length">
 	There are no exports in progress at this time.
 </div>
-
+<div>{{migratingHash}}
 <div ng-show="migratingProjects.length">
 	<ul class="list-group" style="margin-bottom:0">
-  	<li class="list-group-item" ng-repeat="migratingProject in migratingProjects | orderBy:'site_name'">
+  	<li class="list-group-item" ng-repeat="migratingProject in migratingProjects | orderBy:'site_id'">
   		<!--//this is not very good, but leaves the model untouched for polling needs
   		and presents a categorized view -->
-  		<div style="border-bottom: 1px solid #ddd;margin:-6px -13px 10px;padding:0 5px 5px 5px" ng-if ="migratingProject.site_name !== migratingProjects[$index - 1].site_name"><strong>{{migratingProject.site_name}}</strong></div>
+  		<div style="border-bottom: 1px solid #ddd;margin:-6px -13px 10px;padding:0 5px 5px 5px" ng-if ="migratingProject.site_id !== migratingProjects[$index - 1].site_id"><strong>{{migratingProject.site_name}} - {{migratingProject.site_id}}</strong></div>
   		<div class="row">
 	  		<div class="col-md-5 col-lg-5 col-sm-5 col-xs-5">
 	    			{{migratingProject.tool_name}}
 		  	</div>
 		  	<div class="col-md-5 col-lg-5 col-sm-5 col-xs-5">
-	    			{{migratingProject.site_name}}
+	    			
 		  	</div>
 		  	<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
 	    			<div class="spinner"></div>
