--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -124,6 +124,14 @@ h3.panel-title small {
   color:#a94442
 }
 
+.glyphicon-ok {
+  color:green
+}
+
+.glyphicon-fire {
+  color:red
+}
+
 @media (max-width: 480px) {
 	.panel-heading {
 		background-color: #777 !important;
