--- a/public/views/projects-source-lite.html
+++ b/public/views/projects-source-lite.html
@@ -42,8 +42,10 @@
           <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1">
             <span class="spinner" ng-show="project.loadingTools"></span>
           </div>
-					<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
-
+					<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4" style="text-align:right">
+            <span ng-show="project.type !=='myworkspace'">
+              <a data-toggle="modal" data-target="#membershipModal"  href="" ng-click="exportSiteMembership(project.site_id, project.site_name)">Members</a> | 
+            </span>
 						<a ng-click="getTools(project.site_id)" href=""
 							ng-show="!project.stateHasTools && !project.migrating"> Download Options
                <span class="sr-only">for site {{project.site_name}}</span>
