--- a/public/views/projects-source-lite.html
+++ b/public/views/projects-source-lite.html
@@ -44,7 +44,8 @@
           </div>
 					<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4" style="text-align:right">
             <span ng-show="project.type !=='myworkspace'">
-              <a data-toggle="modal" data-target="#membershipModal"  href="" ng-click="exportSiteMembership(project.site_id, project.site_name)">Members</a> | 
+              <a data-toggle="modal" data-target="#membershipModal"  href="" ng-click="exportSiteMembership(project.site_id, project.site_name)">Members</a>
+              <span ng-show="project.type !=='myworkspace' && !project.stateHasTools"> | </span>
             </span>
 						<a ng-click="getTools(project.site_id)" href=""
 							ng-show="!project.stateHasTools && !project.migrating"> Download Options
